Added Personal Info Page

--- a/src/components/buttons/Button/style.css
+++ b/src/components/buttons/Button/style.css
@@ -3,6 +3,6 @@ button > p {
     font-size: 14px;
     font-weight: 600;
     text-align: center;
-    padding: 11px 60px;
+    /* padding: 11px 60px; */
     color: white;
 }
