--- a/src/components/common/Header/components/UpperHeaderBar/styles.css
+++ b/src/components/common/Header/components/UpperHeaderBar/styles.css
@@ -4,3 +4,18 @@ nav > a {
     font-weight: 600;
     padding-left: 40px;
 }
+
+.upper-header {
+    justify-content: unset;
+}
+
+@media (width <= 1000px) {
+    .upper-header-button-container {
+        display: none !important;
+    }
+
+    .upper-header {
+        justify-content: center !important;
+        padding: 10px 0;
+    }
+}
