--- a/src/components/common/Footer/styles.css
+++ b/src/components/common/Footer/styles.css
@@ -8,6 +8,15 @@
     padding: 30px 0;
 }
 
+.footer-inner-container {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 0;
+}
+
 p {
     font-family: Raleway;
     font-size: 20px;
@@ -21,6 +30,8 @@ p {
 .footer-contacts {
     position: absolute;
     right: 50px;
+    display: flex;
+    flex-direction: column;
 }
 
 .footer-contacts > p {
@@ -34,4 +45,25 @@ p {
 
 .footer-bottom-text {
     padding-top: 30px;
+}
+
+@media (width <= 1000px) {
+    .footer-inner-container {
+        flex-direction: column-reverse !important;
+        gap: 10px;
+    }
+    .footer-contacts {
+        position: relative !important;
+        right: 0 !important;
+        left: 0 !important;
+        gap: 10px;
+    }
+    .footer-bottom-text {
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: 800;
+        line-height: 16.44px;
+        letter-spacing: 0.03em;
+        text-align: center;
+    }
 }
