--- a/src/routes/UserInfo/components/Section/styles.css
+++ b/src/routes/UserInfo/components/Section/styles.css
@@ -14,6 +14,7 @@
 
     padding: 10px 20px;
     padding-right: 0;
+    width: 100%;
 }
 
 .title {
@@ -32,4 +33,26 @@
     line-height: 28.18px;
     text-align: left;
     color: rgba(69, 69, 69, 1);
+}
+
+@media screen and (max-width: 1000px) {
+    .section {
+        padding: 20px;
+        gap: 10px;
+    }
+    .title {
+        font-family: Raleway;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 16.44px;
+        text-align: left;
+        color: rgba(69, 69, 69, 1);
+    }
+    .content-text {
+        font-family: Raleway;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 18.78px;
+        text-align: left;
+    }
 }
