--- a/src/routes/Category/styles.css
+++ b/src/routes/Category/styles.css
@@ -1,1 +1,12 @@
 @tailwind utilities;
+
+.category-main-container {
+    width: 100%;
+    margin-left: 2.5rem;
+}
+
+@media screen and (max-width: 1000px) {
+    .category-main-container {
+        margin-left: 0;
+    }
+}
