--- a/src/routes/Likes/styles.css
+++ b/src/routes/Likes/styles.css
@@ -1,1 +1,12 @@
 @tailwind utilities;
+
+.like-container {
+    width: 100%;
+    margin-left: 2.5rem;
+}
+
+@media screen and (max-width: 1000px) {
+    .like-container {
+        margin: 0;
+    }
+}
