--- a/src/routes/Category/styles.css
+++ b/src/routes/Category/styles.css
@@ -3,10 +3,12 @@
 .category-main-container {
     width: 100%;
     margin-left: 2.5rem;
+    padding: 2.5rem 0;
 }
 
 @media screen and (max-width: 1000px) {
     .category-main-container {
         margin-left: 0;
+        padding: 0;
     }
 }
