--- a/src/routes/UserInfo/components/Section/styles.css
+++ b/src/routes/UserInfo/components/Section/styles.css
@@ -11,6 +11,7 @@
     border-left-width: 5px;
     border-style: solid;
     border-color: rgba(81, 199, 47, 1);
+    border-radius: 7px;
 
     padding: 10px 20px;
     padding-right: 0;
