--- a/src/components/common/CatalogStripeMob/styles.css
+++ b/src/components/common/CatalogStripeMob/styles.css
@@ -6,9 +6,14 @@
     display: none;
 }
 
+.button-catalog-mob {
+    width: 100%;
+    background-color: rgba(114, 191, 68, 1);
+}
+
 @media screen and (width <= 1000px) {
     .catalog-stripe-sidebar-mob-container {
-        display: flex !important;
+        display: block !important;
         position: absolute;
         background-color: rgba(0, 0, 0, 0.2);
         left: 0;
