--- a/src/components/common/Modals/LogInModal/styles.css
+++ b/src/components/common/Modals/LogInModal/styles.css
@@ -76,11 +76,11 @@
 
 @media screen and (max-width: 1000px) {
     .modal-content-container {
-        width: 95%;
+        width: 95% !important;
     }
     .modal-bottom-buttons-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 20px;
+        flex-direction: column !important;
+        align-items: center !important;
+        gap: 20px !important;
     }
 }
