--- a/src/routes/Home/components/Main/styles.css
+++ b/src/routes/Home/components/Main/styles.css
@@ -3,7 +3,7 @@
     width: 100%;
 }
 
-.catalog-stripe-mob-container {
+.catalog-stripe-main-mob-container {
     display: none;
 }
 
@@ -12,7 +12,7 @@
         margin-left: 0px;
         width: 100%;
     }
-    .catalog-stripe-mob-container {
-        display: flex !important;
+    .catalog-stripe-main-mob-container {
+        display: block !important;
     }
 }
