--- a/src/routes/Cart/styles.css
+++ b/src/routes/Cart/styles.css
@@ -12,6 +12,10 @@
     margin-left: 2.5rem;
 }
 
+.catalog-stripe-mob-container {
+    display: none;
+}
+
 .cart-total-price-container {
     display: flex;
     width: 100%;
@@ -22,5 +26,8 @@
 @media (width <= 1000px) {
     .cart-main-container {
         margin-left: 0;
+    }
+    .catalog-stripe-mob-container {
+        display: block !important;
     }
 }
