--- a/src/components/common/Footer/styles.css
+++ b/src/components/common/Footer/styles.css
@@ -1,6 +1,7 @@
 @tailwind utilities;
 
 .footer-main-container {
+    position: relative;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -47,6 +48,23 @@ p {
     padding-top: 30px;
 }
 
+.footer-bottom-container {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.language-selector-container {
+    position: absolute;
+    right: 2%;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+}
+
 @media (width <= 1000px) {
     .footer-inner-container {
         flex-direction: column-reverse !important;
@@ -65,5 +83,10 @@ p {
         line-height: 16.44px;
         letter-spacing: 0.03em;
         text-align: center;
+    }
+    .language-selector-container {
+        position: relative !important;
+        display: block !important;
+        width: fit-content !important;
     }
 }
