Changed favicon and site title

--- a/src/components/common/CategoryUpperView/styles.css
+++ b/src/components/common/CategoryUpperView/styles.css
@@ -13,6 +13,7 @@
     top: 0;
     bottom: 0;
     right: 17%;
+    left: 0;
     align-content: center;
     justify-content: center;
     padding: 30px;
