--- a/src/routes/Product/components/ProductView/components/Comment/styles.css
+++ b/src/routes/Product/components/ProductView/components/Comment/styles.css
@@ -27,3 +27,10 @@
     text-align: left;
     color: #454545;
 }
+
+@media (width <= 1000px) {
+    .comment {
+        padding-top: 30px;
+        width: 100% !important;
+    }
+}
