--- a/src/components/common/Footer/styles.css
+++ b/src/components/common/Footer/styles.css
@@ -7,6 +7,7 @@
     width: 100%;
     background-color: rgba(114, 191, 68, 1);
     padding: 30px 0;
+    margin-top: auto;
 }
 
 .footer-inner-container {
