--- a/src/components/common/Header/components/NavLinks/styles.css
+++ b/src/components/common/Header/components/NavLinks/styles.css
@@ -6,7 +6,7 @@
 }
 
 .header-nav-links-container > a:focus {
-    color: rgba(81, 199, 47, 1);
+    color: #72BF44;
 }
 
 .header-nav-links-container-mob {
