--- a/src/routes/Product/components/ProductView/styles.css
+++ b/src/routes/Product/components/ProductView/styles.css
@@ -62,7 +62,7 @@
     font-weight: 700;
     line-height: 39.01px;
     text-align: left;
-    color: #51c72f;
+    color: #72BF44;
 }
 
 .product-info {
