--- a/src/routes/UserInfo/components/Section/styles.css
+++ b/src/routes/UserInfo/components/Section/styles.css
@@ -10,7 +10,7 @@
     border-width: 1px;
     border-left-width: 5px;
     border-style: solid;
-    border-color: rgba(81, 199, 47, 1);
+    border-color: #72BF44;
     border-radius: 7px;
 
     padding: 10px 20px;
