--- a/src/components/common/Header/styles.css
+++ b/src/components/common/Header/styles.css
@@ -17,7 +17,7 @@
     font-size: 10px;
     font-weight: 400;
     font-style: Raleway;
-    color: #51c72f;
+    color: #72BF44;
 }
 
 .header-nav-links-mob {
@@ -105,7 +105,7 @@
     align-items: center;
 }
 .header-input {
-    background-color: #51c72f40;
+    background-color: #72BF4440;
     color: rgba(69, 69, 69, 1);
     font-size: 10px;
     font-weight: 400;
@@ -116,7 +116,7 @@
     padding-left: 8px;
 }
 .header-input-button {
-    background-color: #51c72f40;
+    background-color: #72BF4440;
     height: 25px;
     padding: 0 8px;
 }
