--- a/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
+++ b/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
@@ -1,7 +1,9 @@
 @tailwind utilities;
 
 .slide {
-    flex: 1 0 100%;
+    flex: 0 0 100%; /* фиксированная ширина */
+    width: 100%;
+    height: 300px;
     position: relative;
 }
 
@@ -12,7 +14,7 @@
     left: 20%;
     display: flex;
     align-items: center;
-    color: black;
+    color: #454545;
 }
 
 @media (width <= 1000px) {
