--- a/src/components/common/Footer/styles.css
+++ b/src/components/common/Footer/styles.css
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    position: relative;
     justify-content: center;
     align-items: center;
     padding: 30px 0;
