--- a/src/components/common/SideBar/styles.css
+++ b/src/components/common/SideBar/styles.css
@@ -19,6 +19,7 @@
     display: flex;
     flex-direction: column;
     width: 20%;
+    min-width: 300px;
     height: fit-content;
     border-right-width: 1px;
     border-bottom-width: 1px;
@@ -34,6 +35,7 @@
     border-bottom-width: 1px;
     border-style: solid;
     border-color: rgba(235, 239, 241, 1);
+    padding-left: 0px;
 }
 
 .category-title {
@@ -49,6 +51,7 @@
     border-color: rgba(235, 239, 241, 1);
     padding: 20px;
     padding-right: 0;
+    padding-left: 0px;
 }
 
 .subcategory-title {
@@ -59,6 +62,8 @@
     text-align: left;
     color: rgba(69, 69, 69, 1);
     padding: 5px;
+    margin-left: -10px;
+    border-radius: 3px;
     padding-left: 10px;
 }
 
