--- a/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
+++ b/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
@@ -11,7 +11,12 @@
     position: absolute;
     top: 0;
     bottom: 0;
-    left: 20%;
+    font-size: 48px;
+    left: 15%;
+    margin-top: 40px;
+    max-width: 382px;
+    line-height: 100%;
+    text-align: start;
     display: flex;
     align-items: center;
     color: #454545;
