--- a/src/routes/Product/components/ProductView/styles.css
+++ b/src/routes/Product/components/ProductView/styles.css
@@ -12,6 +12,7 @@
 .product-view-container {
     width: 95%;
     display: grid;
+    margin-top: 46px;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
