--- a/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
+++ b/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
@@ -1,26 +1,33 @@
 @tailwind utilities;
 
 .slide {
-    flex: 0 0 100%; /* фиксированная ширина */
+    flex: 0 0 100%;
     width: 100%;
     height: 300px;
     position: relative;
-}
-
-.slider-text {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    font-size: 48px;
-    left: 15%;
-    margin-top: 40px;
-    max-width: 382px;
-    line-height: 100%;
-    text-align: start;
+    padding: 0 10%;
     display: flex;
     align-items: center;
-    color: #454545;
+    justify-content: space-around;
+    box-shadow: inset 0px 0px 7px 0px #e8e8e8;
 }
+
+
+.slider-text {
+    font-size: 48px;
+    max-width: 382px;
+    text-align: start;
+    color: #454545;
+    display: flex;
+    align-items: center;
+}
+
+.slide-image {
+    height: 250px;
+    width: auto;
+    object-fit: contain;
+}
+
 
 @media (width <= 1000px) {
     .slider-text {
