add slides order changing, add editing slides text and image. add layout paddings, fix layout in category upper view (description went out of boundaries)

--- a/src/components/common/CategoryUpperView/styles.css
+++ b/src/components/common/CategoryUpperView/styles.css
@@ -28,8 +28,8 @@
 }
 
 .category-image {
-    width: 30%;
-    height: 30%;
+    /* width: 30%;
+    height: 30%; */
     max-height: 200px;
     max-width: 250px;
     object-fit: cover;
