--- a/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
+++ b/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
@@ -5,21 +5,28 @@
     width: 100%;
     height: 300px;
     position: relative;
-    padding: 0 10%;
+    /* padding: 0 10%;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: inset 0px 0px 7px 0px #e8e8e8;
+    box-shadow: inset 0px 0px 7px 0px #e8e8e8; */
 }
 
 
 .slider-text {
+    position: absolute;
+    white-space: pre-line;
+    top: 0;
+    bottom: 0;
     font-size: 48px;
+    left: 15%;
+    margin-top: 40px;
     max-width: 382px;
+    line-height: 100%;
     text-align: start;
-    color: #454545;
     display: flex;
     align-items: center;
+    color: #454545;
 }
 
 .slide-image {
