--- a/src/routes/Home/components/Slider/components/Arrows/styles.css
+++ b/src/routes/Home/components/Slider/components/Arrows/styles.css
@@ -13,6 +13,10 @@ svg {
     justify-content: space-between;
     padding: 1.5rem;
     align-items: center;
+    pointer-events: none;
+}
+.arrows > * {
+  pointer-events: auto; /* А сами кнопки — да */
 }
 
 @media (width <= 1000px) {
