--- a/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
+++ b/src/routes/Home/components/Slider/components/SlidesList/components/Slide/styles.css
@@ -5,11 +5,14 @@
     width: 100%;
     height: 300px;
     position: relative;
-    /* padding: 0 10%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    box-shadow: inset 0px 0px 7px 0px #e8e8e8; */
+}
+
+.slide-inner {
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  cursor: pointer;          /* чтоб было понятно, что это ссылка */
 }
 
 
@@ -19,7 +22,7 @@
     top: 0;
     bottom: 0;
     font-size: 48px;
-    left: 15%;
+    left: 10%;
     margin-top: 40px;
     max-width: 382px;
     line-height: 100%;
