--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -8,6 +8,7 @@
     border-top-color: #fff;
     border-left-color: #fff;
     display: grid;
+    position: relative;
 }
 
 .card:hover {
@@ -46,6 +47,15 @@
     line-height: 16.44px;
     text-align: left;
     color: #454545;
+    
+    /* Ограничиваем заголовок 2 строками с многоточием */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: calc(16.44px * 2); /* 2 строки по высоте line-height */
 }
 
 .card-description {
@@ -57,6 +67,15 @@
     color: #454545;
     padding-top: 10px;
     padding-bottom: 10px;
+    
+    /* Ограничиваем описание 3 строками с многоточием */
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: calc(16.44px * 3); /* 3 строки по высоте line-height */
 }
 
 .card-price-old {
