--- a/src/routes/Cart/components/QuantityPicker/components/Minus/styles.css
+++ b/src/routes/Cart/components/QuantityPicker/components/Minus/styles.css
@@ -1,12 +1,12 @@
 .minus-icon {
     width: 32px;
     height: 4px;
-    fill: #C7C7C7;
+    fill: #72BF44;
     cursor: pointer;
     transition: fill 0.3s ease;
   }
   
   .minus-icon:hover {
-    fill: #72BF44;
+    fill: #5a9a36;
   }
   
