--- a/src/routes/Cart/components/TotalPrice/styles.css
+++ b/src/routes/Cart/components/TotalPrice/styles.css
@@ -8,11 +8,11 @@
 .total-price-title {
     font-family: Raleway;
     font-size: 20px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 23.48px;
     letter-spacing: 0.03em;
     text-align: center;
-    color: #c7c7c7;
+    color: #72BF44;
 }
 
 .total-price-value {
